GNOME Bugzilla – Bug 745463
Search suggestions are not shown in Clocks / Weather
Last modified: 2015-03-10 10:17:00 UTC
Typing a part of the city doesn't show search suggestions for cities in Weather/Clocks running in a wayland session with GDK_BACKEND=wayland Might be a duplicate of bug 735826
is this simply a matter of the popover popping up towards the top ?
(In reply to Matthias Clasen from comment #1) > is this simply a matter of the popover popping up towards the top ? No, the suggestion box is not displayed at all
is this still happening ?
Created attachment 298872 [details] Screenshot Still occurs with both GDK_BACKEND set and unset. gtk3 3.15.10-46-g01d76b7701f6b8d3e5654d679fb291826cf970bf
Created attachment 298883 [details] [review] entrycompletion: Ensure transient_for is set before showing window gtk_entry_set_completion() (and _gtk_entry_completion_connect underneath) may happen when the entry has no toplevel yet. This window acts as the "parent" for subsurface windows on wayland, and is indispensable to create its backing wl_subsurface, so this resulted in non-visible popups there. Fix this by ensuring transient_for is set before showing the popup.
Review of attachment 298883 [details] [review]: looks good to me
Attachment 298883 [details] pushed as 94ec6b4 - entrycompletion: Ensure transient_for is set before showing window